Adding in more hyprland rules, fixing for hyprland vs sway instead for waybar
See summary

--- a/desktop/hyprland/waybar/style.css
+++ b/desktop/hyprland/waybar/style.css
@@ -50,6 +50,10 @@ tooltip {
     color: #ddc7a1;
 }
 
+#workspaces button.active {
+    color: #ddc7a1;
+}
+
 #workspaces button.urgent {
     background-color: #e78a4e;
 }
